# SE-Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h
test/: main.cpp  test.cpp
